ChooseEatery Page updated. One bug remaining: The go button is too tall but I can't get it below 20px so will fix it.

--- a/client/src/pages/ChooseEatery.css
+++ b/client/src/pages/ChooseEatery.css
@@ -1,17 +1,115 @@
 
+
 .left-side {
-  flex: 3;
+  flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  gap: 1rem; 
 }
 
 .right-side {
-  flex: 10; /* adjust ratio as you like */
+  flex: 1; 
   padding: 2rem;
 }
 
 .chit-image {
-  max-width: 100%;
+  max-width: 120%;
+  max-height: 80%;
+  
+  margin-left: -12rem;
+  padding-top: 10%;
+  z-index: 1;
+}
+
+.anyother-image {
+  max-width: 300%;
   height: auto;
 }
+
+.choose-eatery-page .text-box {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.8);
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  color: #000;
+  font-weight: bold;
+  z-index: 2;
+  border: 1px solid #ccc;
+}
+
+.choose-eatery-page .text-box:nth-of-type(1) {
+  top: 36%;
+  left: 20%;
+}
+
+.choose-eatery-page .text-box:nth-of-type(2) {
+  top: 42.5%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(3) {
+  top: 49%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(4) {
+  top: 55.5%;
+  left: 20%
+}
+
+.choose-eatery-page .text-box:nth-of-type(5) {
+  top: 62%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(6) {
+  top: 68.5%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(7) {
+  top: 75%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(8) {
+  top: 81.5%;
+  left: 20%
+}
+.choose-eatery-page .text-box:nth-of-type(9) {
+  top: 87.5%;
+  left: 20%
+}
+
+.choose-eatery-page .text-box:nth-of-type(10) {
+  top: 55%;
+  left: 53%;
+}
+
+.choose-eatery-page .btn {
+  position: absolute;
+  padding:0;
+  z-index: 1;
+  width: 370px;
+  height: 20px;
+  align-self: flex-start;
+  border-radius: 1px;
+  background: rgba(255, 255, 255, 0);
+  
+  cursor: pointer;
+  transition: 
+    background 0.3s,
+    transform 0.2s,
+    box-shadow 0.2s;
+}
+
+.choose-eatery-page .btn:hover {
+  background: rgba(255, 255, 255, 0);
+  transform: scale(1.05);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.go {
+  top: 11.9%; left: 50%;
+}
+
+
+
+
+
